--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Quazta</title>
 </head>
 <body>
-    <h1>Quazta</h1>
+    <img src="Quazta Logo.png" height="50px" id="logo">
     <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
