Remove Content from Homepage

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <title>Quazta</title>
 </head>
 <body>
-    <img src="Quazta Logo.png" height="50px" id="logo">
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-    </nav>
+    <header>
+        <a href="index.html"><img src="Quazta Logo.png" height="50px" id="logo"></a>
+        <nav>
+            <a id="links" href="index.html">Home</a>
+            <a id="links" href="about.html">About</a>
+        </nav>
+    </header>
+
+    </div>
 </body>
 </html>
