--- a/about.html
+++ b/about.html
@@ -5,9 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
-    <title>Document</title>
+    <title>Quazta | About</title>
 </head>
 <body>
+    <header>
+        <a href="index.html"><img src="Quazta Logo.png" height="50px" id="logo"></a>
+        <nav>
+            <a id="links" href="index.html">Home</a>
+            <a id="links" href="about.html">About</a>
+        </nav>
+    </header>
     
+    <h1>About Quazta</h1>
+
 </body>
 </html>
